<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_amp_dominate_the_league">Find a team in your city &amp; dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="desired_league">Desired League:</string>
    <string name="men_s">Men\'s</string>
    <string name="women_s">Women\'s</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">NEXT</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">FINISH</string>
    <string name="looking_for_a_league_skill_league_near_you">Looking for a %1$s %2$s league near you…</string>
</resources>